--- a/django_bootstrap_calendar/templates/django_bootstrap_calendar/calendar.html
+++ b/django_bootstrap_calendar/templates/django_bootstrap_calendar/calendar.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% load i18n %}
 {% load bootstrap_calendar %}
 
@@ -13,7 +13,7 @@
 <div class="row">
     <div class="span7">
         {% bootstrap_calendar '' %}
-
+        {% bootstrap_calendar_init language="template" %}
     </div>
     <div class="span3">
         test
