got the headers to work. October 2015

--- a/dj_calendar/templates/dj_calendar/partial/calendar.html
+++ b/dj_calendar/templates/dj_calendar/partial/calendar.html
@@ -1,1 +1,4 @@
-<div id="calendar" class="{{ css_classes }}"></div>
+<h1 id="title_header"></h1>
+<div id="calendar" class="{{ css_classes }}">
+
+</div>
